--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ ol h5{
  .mobileNet{
     font-size: 20px; 
     background-color: gold; 
+    width:40px;
     color: whitesmoke;  
     padding: 5px;
  }
